# panoramic-tooth-segmentation

./: data.dvc  pyproject.toml
notebook/: EDA_annotations.ipynb  training.ipynb
