[tool.poetry]
name = "tooth-segmentation"
version = "0.1.0"
description = ""
authors = ["tm-ong-chotayapa <ongc@thinkingmachin.es>"]
readme = "README.md"
packages = [{include = "tooth_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
